--- a/2013/1km paper/data_taking.tex
+++ b/2013/1km paper/data_taking.tex
@@ -1,15 +1,15 @@
 \section{Data taking}
 %
 The results reported here are based on data taken in October 2012 
-in a dedicated LHC proton fill
+in a dedicated LHC proton fill (3216)
 with very special beam properties. The beam optics with $\beta^{*} = 1000\,$m
 has been specifically developed for measuring low-$|t|$ elastic scattering.
 Like the previously used $\beta^{*} = 90\,$m optics~\cite{epl96,epl101-tot,prl111},
 this new optics configuration
 provides parallel-to-point focussing in the vertical plane at the RP position 
-$s = 220\,m$, implemented by tuning the transport matrix elements via the
+$s = 220\un{m}$, implemented by tuning the transport matrix elements via the
 LHC magnet currents: the magnification $v_{y}$ is made to vanish whereas the 
-effective length $L_{y}$ is maximised (285.6\,m as compared to 260\,m for 
+effective length $L_{y}$ is maximised ($285.6\un{m}$ as compared to $260\un{m}$ for 
 $\beta^{*} = 90\,$m).
 The resulting large displacement of a scattered proton with a given $t$-value 
 away from the beam centre at the RP, together with a very small beam 
@@ -41,10 +41,11 @@ hour until the beam-to-collimator gap was refilled by diffusion, as
 diagnosed by the increasing RP trigger rate (Figure~\ref{fig:overview}, top). As soon as the background conditions
 had deteriorated to an unacceptable level, the beam cleaning procedure as described above was repeated, again followed by a quiet data-taking period.
 This entire sequence was iterated 6 times until the luminosity had degraded 
-from initally $2\times10^{27}\,\rm cm^{2}s^{-1}$ to 
-$0.5\times10^{27}\,\rm cm^{2}s^{-1}$ \textbf{(check!)} at which point the data yield was considered as too low. 
+from initially $2\times10^{27}\,\rm cm^{-2}s^{-1}$ to 
+$0.5\times10^{27}\,\rm cm^{-2}s^{-1}$ \todo{(check!)} % mean value from data: 19.8E3 mb^-1 / 17 772 s ~ 1 mb^-1 s^-1 = 10^27 cm^-2 s^-1
+at which point the data yield was considered as too low. 
 During the 9 hour long fill, an integrated luminosity of $27\,\rm \mu b^{-1}$ 
-\textbf{(check!)} has been 
+\todo{($19.8$ used in data analysis)} has been  
 accumulated, split into 6 data sets corresponding to the calm periods between
 the cleaning operations. 
 
@@ -60,37 +61,17 @@ safe distance of $10\,\sigma_{x} \approx 7.5$\,mm.
 
 The collected events were triggered by a logical \textit{OR} of: inelastic 
 trigger (activity in either arm of T1 or T2), double-arm proton trigger 
-(coincidence of any RP left of IP5 and any RP right of IP5), 
-random bunch crossings.
+(coincidence of any RP left of IP5 and any RP right of IP5) and zero-bias trigger
+(random bunch crossings) for calibration purposes.
 
-\iffalse
-\> what data: 24-25 October 2012, how many bunches, 2 colliding bunch pairs, bunch population $10^{11}$, about 9h of data taking, luminosity, trigger, ...
-
-\> challenging environment
-\>> sizeable beam-induced background $\Rightarrow$ regular (every 1 or 2 hours) beam cleaning
-
-\> beam cleaning -- TODO: verify
-\>> RPs at $3\un{\sigma}$ retracted by $1\un{\sigma}$ for safety reasons
-\>> collimators to $2\un{\sigma}$, then retracted to $2.5\un{\sigma}$
-\>> RPs back to $3\un{\sigma}$
-
-\> different diagonal settings (due to the anti-collision switches -- but also positive aspect: better understanding of systematics)
-\>> 45 top -- 56 bottom: verticals at $3\un{\sigma}$, $|t|_{\rm min} \approx 6\cdot10^{-4}\un{GeV^2}$
-\>> 45 bottom -- 56 top: verticals at $10\un{\sigma}$, $|t|_{\rm min} \approx 3\cdot10^{-3}\un{GeV^2}$
-\>> trigger logic
-
-
-\> $\beta^* = 1000\un{m}$ optics $\Leftarrow$ need extremely low $t$ smearing
-\>> very low beam divergence
-\>> even higher effective length than the 90m optics
-\fi
+\todo{190k (162k) elastic events tagged in close (far) diagonal}.
 
 
 \begin{figure*}
 \begin{center}
 \includegraphics[width=16cm]{fig/overview.pdf}
 \vskip-3mm
-\caption{Illustration of the beam conditions. The T2 rate is roughly proportional to luminosity. The RP rate is sensitive to luminosity plus beam-halo. The pile-up probability follows the intensity of beam-halo protons.}
+\caption{Illustration of the beam conditions. The T2 rate is roughly proportional to luminosity. The RP rate is sensitive to luminosity plus beam-halo. The pile-up probability follows the intensity of beam-halo protons. \todo{need the bottom part?}}
 \label{fig:overview}
 \end{center}
 \end{figure*}
