--- a/2013/1km paper/elastic_1km_prl.tex
+++ b/2013/1km paper/elastic_1km_prl.tex
@@ -4,6 +4,7 @@
 
 \usepackage{amsmath}
 \usepackage{graphicx}
+\usepackage{color}
 
 \def\d{{\rm d}}
 \def\un#1{\,{\rm #1}}
@@ -11,6 +12,7 @@
 \def\unt#1{[{\rm #1}]}
 \def\e{{\rm e}}
 \def\etal{et al.}
+\def\todo#1{{\bf\color{red} #1}}
 
 \setbox123\hbox{$0$}
 \setbox124\hbox{$.$}
@@ -67,7 +69,7 @@ This article presents the measured cross-section and its interpretation for
 different assumptions on the functional form of the interference term. In 
 particular, the $\rho$-parameter, i.e. the ratio between the real and the 
 imaginary parts of the forward hadronic elastic amplitude, was determined.
-\textbf{Give value here? For which case?}
+\todo{Give value here? For which case?}
 \end{abstract}
 
 
@@ -154,6 +156,11 @@ Finland, the OTKA grant NK 101438, 73143 (Hungary) and the NKTH-OTKA grant 74458
 	\REVIEW{Z.~Phys.}{C63}{1994}{619--630}
 	%doi       = "10.1007/BF01557628",
 
+\bibitem{lafferty94}
+ 	% Where to stick your data points: The treatment of measurements within wide bins
+	\Name{Lafferty G.~D.~and Wyatt T.~R.}
+	\REVIEW{Nucl.\ Instrum.\ Meth.}{A 355}{1995}{541}
+
 \end{thebibliography}{99}
 
 \iffalse
@@ -200,11 +207,6 @@ Finland, the OTKA grant NK 101438, 73143 (Hungary) and the NKTH-OTKA grant 74458
 	\Name{E710} \REVIEW{Phys.~Rev.~Lett.}{68}{1992}{2433} and \REVIEW{Nuovo Cimento}{A106}{1992}{123}; 
 	\Name{D0} D0 Note 6056-CONF; 
 	\Name{pp2pp} \REVIEW{Phys.~Lett.}{B579}{2004}{245}
-
-\bibitem{lafferty94}
- 	% Where to stick your data points: The treatment of measurements within wide bins
-	\Name{Lafferty G.~D.~and Wyatt T.~R.}
-	\REVIEW{Nucl.\ Instrum.\ Meth.}{A 355}{1995}{541}
 
 \bibitem{compete} 
 	\Name{Cudell~J.~R.~\etal{} (COMPETE Collaboration)}
