--- a/2013/1km paper/experimental_apparatus.tex
+++ b/2013/1km paper/experimental_apparatus.tex
@@ -1,5 +1,7 @@
 \section{Experimental Apparatus}
-%
+
+\todo{shorter? leave out T1 and T2?}
+
 The TOTEM experiment is dedicated to the measurement of the total 
 cross-section, elastic scattering
 and diffractive processes at the LHC. The experimental
