--- a/2013/1km paper/elastic_1km_prl.tex
+++ b/2013/1km paper/elastic_1km_prl.tex
@@ -161,14 +161,23 @@ Finland, the OTKA grant NK 101438, 73143 (Hungary) and the NKTH-OTKA grant 74458
 	\Name{Lafferty G.~D.~and Wyatt T.~R.}
 	\REVIEW{Nucl.\ Instrum.\ Meth.}{A 355}{1995}{541}
 
-\end{thebibliography}{99}
+\bibitem{8tev-90m}
+	\Name{Antchev G.~\etal{}~(TOTEM Collaboration)}
+	The $8\un{TeV}$, $\beta^* = 90\un{m}$ paper
 
-\iffalse
-
+\bibitem{totem-optics}
+	\Name{Antchev G.~\etal{}~(TOTEM Collaboration)}
+	LHC Optics Measurement with Proton Tracks Detected by the Roman Pots of the TOTEM Experiment, 
+	arXiv:1406.0546
 
 \bibitem{totem-ijmp}
 	\Name{Antchev G.~\etal{}~(TOTEM Collaboration)}
 	\REVIEW{Int.~J.~Mod.~Phys.~A}{28}{2013}{1330046}
+
+
+\end{thebibliography}{99}
+
+\iffalse
 
 \bibitem{epl95}
     %Proton-proton elastic scattering at the LHC energy of \sqrt{s} = 7 TeV, Europhys. Lett. 95 (2011) 41001,CERN-PH-EP-2011-101 
