--- a/2013/1km paper/data_table.tex
+++ b/2013/1km paper/data_table.tex
@@ -1,4 +1,14 @@
-\tiny
+\begin{table*}
+\vskip-5mm
+\caption{%
+\todo{TODO}: The elastic differential cross-section as determined in this analysis using the optimised binning. The left-most three columns describe bins in $t$. The representative point give the $t$ value suitable for fitting
+\cite{lafferty94}. %uncertainty due to different fit models negligible:$10^{-7}\un{GeV^2}$
+Optimise number of digits, spacing. \todo{UPDATE points at the end}
+}
+\vskip-3mm
+\label{tab:data}
+\begin{center}
+\small
 \setlength{\tabcolsep}{3.5pt}
 \def\arraystretch{0.01}
 \begin{tabular}{ccc@{\hskip15pt}ccccccccc}
@@ -74,6 +84,31 @@ $0.04406$ & $0.04574$ & $0.04490$ & $219.763$ & $3.106$ & $ 9.706$ & $   9.702$ 
 $0.04574$ & $0.04746$ & $0.04660$ & $213.875$ & $3.061$ & $ 9.384$ & $   9.380$ & $+0.241$ & $+0.019$ & $+0.044$ & $+0.142$ & $-0.007$ \cr
 $0.04746$ & $0.04921$ & $0.04834$ & $205.553$ & $2.996$ & $ 9.068$ & $   9.063$ & $+0.248$ & $+0.010$ & $+0.030$ & $+0.174$ & $-0.006$ \cr
 $0.04921$ & $0.05100$ & $0.05010$ & $199.863$ & $2.950$ & $ 8.757$ & $   8.751$ & $+0.254$ & $-0.001$ & $+0.015$ & $+0.203$ & $-0.005$ \cr
+\hline
+\hline
+\end{tabular}
+\end{center}
+\vskip-10mm
+\end{table*}
+
+
+\begin{table*}
+\vskip-5mm
+\vskip-3mm
+\label{tab:data_ext}
+\begin{center}
+\todo{UPDATE points at the end}
+\small
+\setlength{\tabcolsep}{3.5pt}
+\def\arraystretch{0.01}
+\begin{tabular}{ccc@{\hskip15pt}ccccccccc}
+\hline
+\hline
+\multispan3\strut\hss $|t|$ bin $\unt{GeV^2}$\hss & \multispan9\hss $\d\sigma/\d t \ung{mb/GeV^2}$ \hss \cr
+\multispan3\hrulefill\hbox to15pt{\hfil} & \multispan9\hrulefill\cr
+left & right & repres. & value & stat.     & full syst. & norm. & optics   & optics   & beam		& alig.	& alig.\cr
+edge & edge  & point   &       & unc.      & unc.       &       & mode 1   & mode 2   & momentum	& x		& y\cr
+\hline
 $0.05100$ & $0.05281$ & $0.05190$ & $191.202$ & $2.880$ & $ 8.452$ & $   8.445$ & $+0.256$ & $-0.009$ & $+0.001$ & $+0.224$ & $-0.006$ \cr
 $0.05281$ & $0.05466$ & $0.05373$ & $186.690$ & $2.834$ & $ 8.153$ & $   8.145$ & $+0.258$ & $-0.017$ & $-0.010$ & $+0.245$ & $-0.005$ \cr
 $0.05466$ & $0.05654$ & $0.05560$ & $179.009$ & $2.766$ & $ 7.861$ & $   7.852$ & $+0.258$ & $-0.026$ & $-0.023$ & $+0.263$ & $-0.005$ \cr
@@ -119,3 +154,5 @@ $0.19242$ & $0.20242$ & $0.19734$ & $ 11.095$ & $0.800$ & $ 0.540$ & $   0.515$ 
 \hline
 \hline
 \end{tabular}
+\end{center}
+\end{table*}
