--- a/2014/90m_1km paper/elastic_90m_1km_prl.tex
+++ b/2014/90m_1km paper/elastic_90m_1km_prl.tex
@@ -46,8 +46,7 @@
 
 \begin{document}
 
-\title{Measurement of Elastic pp Scattering at $\sqrt{\hbox{s}} = \hbox{8}$\,TeV in the 
-Coulomb-Nuclear Interference Region by the TOTEM Experiment at the CERN LHC}
+\title{TODO: title}
 
 \date{\today}
 
@@ -58,18 +57,7 @@ Coulomb-Nuclear Interference Region by the TOTEM Experiment at the CERN LHC}
 
 
 \begin{abstract}
-The TOTEM experiment at the CERN LHC has measured elastic proton-proton 
-scattering at the centre-of-mass energy 
-$\sqrt{s}=8\,$TeV and squared four-momentum transfers $|t|$ from $6\times10^{-4}\,\rm GeV^{2}$ to ...?
-Near the lower end of the $t$-interval, for
-$|t|\lesssim 2\times10^{-3}\,\rm GeV^{2}$, the differential cross-section is 
-sensitive to the 
-interference between the hadronic and the electromagnetic scattering amplitudes.
-This article presents the measured cross-section and its interpretation for 
-different assumptions on the functional form of the interference term. In 
-particular, the $\rho$-parameter, i.e. the ratio between the real and the 
-imaginary parts of the forward hadronic elastic amplitude, was determined.
-\todo{Give value here? For which case?}
+\todo{ABSTRACT}
 \end{abstract}
 
 
@@ -83,34 +71,23 @@ imaginary parts of the forward hadronic elastic amplitude, was determined.
 
 \input introduction.tex
 
-\input experimental_apparatus.tex
-
-\input data_taking.tex
-
-\input differential_cross_section.tex
-
-% tentatively moved to a separate paper
-%\input coulomb.tex
+\input analysis.tex
 
 %--------------------------------------------------
-
 \section{Discussion/Conclusions}
 
-\> here or at the ends of sections 4 and 5 ??
+\> anything to be put in separate section ??
 
 
 %--------------------------------------------------
-
 \section{Outlook}
 
-\> if any...
+\> anything ??
 
-\> what data we have and will publish in near future?
 
 
 
 %--------------------------------------------------
-
 \acknowledgements
 THIS IS JUST PLACEHOLDER -----------
 We are indebted to the beam optics development team
@@ -160,14 +137,13 @@ Finland, the OTKA grant NK 101438, 73143 (Hungary) and the NKTH-OTKA grant 74458
 	\REVIEW{Z.~Phys.}{C63}{1994}{619--630}
 	%doi       = "10.1007/BF01557628",
 
-\bibitem{lafferty94}
- 	% Where to stick your data points: The treatment of measurements within wide bins
-	\Name{Lafferty G.~D.~and Wyatt T.~R.}
-	\REVIEW{Nucl.\ Instrum.\ Meth.}{A 355}{1995}{541}
-
 \bibitem{8tev-90m}
 	\Name{Antchev G.~\etal{}~(TOTEM Collaboration)}
 	The $8\un{TeV}$, $\beta^* = 90\un{m}$ paper
+
+\bibitem{8tev-1km}
+	\Name{Antchev G.~\etal{}~(TOTEM Collaboration)}
+	The $8\un{TeV}$, $\beta^* = 1000\un{m}$ paper
 
 \bibitem{totem-optics}
 	\Name{Antchev G.~\etal{}~(TOTEM Collaboration)}
